--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Digital learning</title>
+    <title>LEARNING</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -93,7 +93,7 @@
               alt="..."
             />
             <div class="carousel-caption d-none d-md-block">
-              <h1>Get Started Digital Learning</h1>
+              <h1 class="text-primary">Get Started Digital Learning</h1>
               <p>
                 learning method based on the use of new digital tools to enable
                 learners to learn in a different way.
