--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               alt="..."
             />
             <div class="carousel-caption d-none d-md-block">
-              <h1 class="text-primary">Get Started Digital Learning</h1>
+              <h1>Get Started Digital Learning</h1>
               <p>
                 learning method based on the use of new digital tools to enable
                 learners to learn in a different way.
@@ -355,7 +355,7 @@
           </div>
       </section>
       <!-- trusted companies -->
-      <section class="mt-5">
+      <section class="mt-5 d-lg-block d-md-none d-none d-sm-none">
         <h1 class="text-center">Trusted by over 800+ companies</h1>
         <div class="text-center">
             <img src="images/company/company-1.png" alt="">
